# Django_Course

./: .env  .env.docker  .gitignore  Dockerfile  README.md  db.sqlite3  django_setup_commands.txt  docker-compose.yml  package-lock.json  pyproject.toml
app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0002_recover_super_user.py  0003_alter_article_content_alter_article_creator_and_more.py  0003_article_creator_alter_article_wordcount.py  0004_alter_user_managers_alter_user_email.py
django_course/: settings.py  urls.py
locale/bn/LC_MESSAGES/: django.mo  django.po
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: button.html  h1.html  h2.html  p.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: base.html  create_article.html  delete_article.html  home.html  update_article.html
templates/app/layouts/: base_form.html
templates/registration/: login.html
templates/socialaccount/snippets/: login.html
