[project]
name = "django-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Sonu64",email = "sonusantu64@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "django_course", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
