[project]
name = "django-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Sonu64",email = "sonusantu64@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "django-allauth[socialaccount] (>=65.14.0,<66.0.0)",
    "dj-database-url (>=3.1.0,<4.0.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "django-widget-tweaks (>=1.5.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "django_course"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-debug-toolbar (>=6.2.0,<7.0.0)"
]
